2004-08-17  Nick Clifton  <nickc@redhat.com>

	* as.c (MD_DEBUG_FORMAT_SELECTOR): Provide default definition.
	(show_usage): Add -g.
	(std_longopts): Add --gen-debug.  Alpha sort the table.
	(parse_args): Print an error message if a switch is not handled.
	Handle the -g switch, calling md_debug_format_selector() if
	necessary.
	* NEWS: Mention new feature.
	* doc/as.texinfo: Document new switch.
	* doc/internals.texi: Document behaviour of md_parse_option.
	
	* config/tc-arm.c (md_parse_option): Do not issue an error message
	if the switch is not recognised.
	* config/tc-m68k.c (md_parse_option): Likewise.
	* config/tc-pdp11.c (md_parse_option): Likewise.
	* config/tc-v850.c (md_parse_option): Likewise.

	* as.h: Fix up formatting.
	* tc.h: Likewise.

2004-08-16  Nick Clifton  <nickc@redhat.com>

	* macro.c (macro_set_alternate): Use ISO C90 formatting.

	* configure.in: Sort architecture based tables alphabetically.
	* configure: Regenerate.

2004-08-16  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-ppc.c (tc_ppc_regname_to_dw2regnum <regnames>): Replace
	{ "cc", 68 }, with { "cr", 70 }.

2004-08-13 Jan Beulich <jbeulich@novell.com>
	   Nick Clifton <nickc@redhat.com>

	* as.c: Add and handle new --alternate command line option.
	* macro.c (macro_set_alternate): New.
	* macro.h (macro_set_alternate): Declare.
	* read.c: Add and handle new .altmacro and .noaltmacro directives.
	* doc/as.texinfo: Document new command line option and pseudo-ops
	as well as insert documentation originating from gasp about
	alternate macro syntax.
	* NEWS: Mention new command line option and pseudo-ops.

2004-08-10  Mark Mitchell  <mark@codesourcery.com>

	* expr.c (operand): Handle the "~", "-", and "!" operators applied
	to bignums.

2004-08-06  Paul Brook  <paul@codesourcery.com>

	* config/tc-arm.c (md_apply_fix3, tc_gen_reloc, arm_parse_reloc):
	Handle new relocations.
	* include/elf/arm.h (elf_arm_reloc_type): Add new EABI relocations.
